修复：ChatController中Thread.ofVirtual()不兼容Java 17
Thread.ofVirtual()是Java 21+特性，项目使用Java 17，替换为new Thread()并指定线程名